yaml/echo-ingress-staging.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress-staging
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - echo1.<YOUR-DOMAIN>
    - echo2.<YOUR-DOMAIN>
    secretName: echo-tls
  rules:
  - host: echo1.<YOUR-DOMAIN>
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.<YOUR-DOMAIN>
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
